--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.5.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1"
   },
   "devDependencies": {},
