--- a/package.json
+++ b/package.json
@@ -3,32 +3,41 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-brands-svg-icons": "^5.15.1",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.13",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.1",
-    "bootstrap": "^4.5.2",
+    "bcrypt": "^5.0.0",
+    "bookshelf": "^1.2.0",
+    "bootstrap": "^4.6.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "joi": "^17.4.0",
+    "knex": "^0.21.18",
     "md5": "^2.3.0",
-    "react": "^16.13.1",
-    "react-bootstrap": "^1.4.0",
-    "react-dom": "^16.13.1",
+    "mysql": "^2.18.1",
+    "react": "^16.14.0",
+    "react-bootstrap": "^1.5.0",
+    "react-dom": "^16.14.0",
     "react-loading-skeleton": "^2.1.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.1"
+    "react-scripts": "^4.0.2"
   },
   "devDependencies": {
-    "faker": "^5.1.0",
+    "faker": "^5.4.0",
     "json-server": "^0.16.3",
+    "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5"
   },
   "scripts": {
+    "start:serv": "nodemon",
     "start": "npm-run-all -p cliente server",
     "cliente": "react-scripts start",
-    "server": "json-server --port 3001 --watch server/db.json",
+    "server": "json-server --port 3001 --watch ./src/server/db.json",
     "seed": "node server/seed.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
